// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme.mount 1`] = `
<glamorous(span)>
  <span
    className="css-1k9f6xb"
  >
    example
  </span>
</glamorous(span)>
`;

exports[`enzyme.render 1`] = `
<span
  class="css-1k9f6xb"
>
  example
</span>
`;

exports[`enzyme.shallow 1`] = `
<span
  className="css-1k9f6xb"
>
  example
</span>
`;
